<resources>
    <string name="app_name">Launcher</string>
    <string name="desc"/>
    <string name="app_manager">应用管理</string>
    <string name="save">保存</string>
    <string name="app_hide">隐藏应用</string>
    <string name="app_show">应用显示</string>
    <string name="input_pwd">输入密码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="pwd_error">密码输入错误</string>
    <string name="modify_success">密码修改成功</string>
    <string name="please_input_pwd_new">请输入新密码</string>
    <string name="app_error">应用程序加载异常</string>
    <string name="admin_mode">管理员模式</string>
    <string name="clear_recent_apps">清理最近使用</string>
    <string name="about">关于</string>
    <string name="show_pwd">显示密码</string>
    <string name="show_about">AppLock&#160;&#160;&#160;&#160;&#160;&#160;1.0.0\nCopyright © 2016&#8211;2017 By Reginer All rights reserved.</string>
    <string name="user_mode">用户模式</string>
    <string name="exit">退出</string>
    <string name="Import">导入</string>
    <string name="export">导出</string>
    <string name="options">选项</string>
    <string name="launch_settings">系统设置</string>
    <string name="reset_to_default">恢复默认</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="config_success">操作成功</string>
    <string name="usb_allow">USB连接许可</string>
    <string name="allow_to_content_pc">允许通过USB连接PC</string>
    <string name="display">显示</string>
    <string name="security">安全</string>
    <string name="programmable_keys">可编程键</string>
    <string name="notification_bar">通知栏</string>
    <string name="set_login_pwd">设置登录密码</string>
    <string name="set_login_pwd_tab">设置登录密码选项</string>
    <string name="if_you_need_show_pwd">如果需要在设置密码框内显示密码</string>
    <string name="logo">图标</string>
    <string name="logo_is_show">配置显示图标选项</string>
    <string name="wallpaper">壁纸</string>
    <string name="wallpaper_config">配置锁屏壁纸选项</string>
    <string name="show_notification">显示通知栏</string>
    <string name="to_show_notification">可以显示通知栏</string>
    <string name="enable_show_notification">使通知栏可用</string>
    <string name="enable_notification">通知栏</string>
    <string name="volume_up">调高音量</string>
    <string name="to_lock_volume_up">锁定硬件音量上键</string>
    <string name="volume_down">调低音量</string>
    <string name="to_lock_volume_down">锁定硬件音量下键</string>
    <string name="left_function">左功能键</string>
    <string name="to_lock_left_function">锁定硬件左功能键</string>
    <string name="right_function">右功能键</string>
    <string name="to_lock_right_function">锁定硬件右功能键</string>
    <string name="admin_mode_start">当前已处于管理员模式</string>
    <string name="no_setting">无系统设置</string>
    <string name="sure_reset">是否确认将AppLock恢复至出厂设置</string>
    <string name="location">路径:</string>
    <string name="name">文件名:</string>
    <string name="no_file">没有文件</string>
</resources>
