<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".options.fragment.ProgrammableFragment">

    <RelativeLayout
        android:id="@+id/rl_volume_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        >

        <TextView
            android:id="@+id/tv_title_volume_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume_up"
            android:textSize="@dimen/sp20"/>

        <TextView
            android:id="@+id/tv_volume_up_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_volume_up"
            android:text="@string/to_lock_volume_up"
            android:textSize="@dimen/sp15"/>

        <CheckBox
            android:id="@+id/cb_volume_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/rl_volume_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        >

        <TextView
            android:id="@+id/tv_title_volume_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume_down"
            android:textSize="@dimen/sp20"/>

        <TextView
            android:id="@+id/tv_volume_down_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_volume_down"
            android:text="@string/to_lock_volume_down"
            android:textSize="@dimen/sp15"/>

        <CheckBox
            android:id="@+id/cb_volume_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/rl_left_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        >

        <TextView
            android:id="@+id/tv_title_left_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left_function"
            android:textSize="@dimen/sp20"/>

        <TextView
            android:id="@+id/tv_left_function_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_left_function"
            android:text="@string/to_lock_left_function"
            android:textSize="@dimen/sp15"/>

        <CheckBox
            android:id="@+id/cb_left_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/rl_right_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        >

        <TextView
            android:id="@+id/tv_title_right_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right_function"
            android:textSize="@dimen/sp20"/>

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_right_function"
            android:text="@string/to_lock_right_function"
            android:textSize="@dimen/sp15"/>

        <CheckBox
            android:id="@+id/cb_right_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>
</LinearLayout>
